--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://mylaravelapi.vercel.app/api/api/$1"
+    }
+  ]
+}
